kubernetes-libvirt/resources/manifests/longhorn-intress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: longhorn-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /longhorn(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: longhorn-frontend
            port:
              name: http
